# rossmann_sales_forecasting

./: .gitignore  LICENSE  Makefile  README.md  app.py  generate_features_json.py  huggingface.yml  pyproject.toml  requirements.txt
models/: feature_names.txt  features.json
rossmann-sales-forecasting/: __init__.py  dataset.py  features.py
rossmann-sales-forecasting/modeling/: predict.py  train.py
rossmann_sales/: __init__.py  app_gradio.py  config.py  dataset.py  features.py  plots.py
rossmann_sales/modeling/: predict.py  train.py
rossmann_sales/utils/: load_artifacts.py
rossmann_sales_forecasting/: __init__.py  app.py  config.py  dataset.py  features.py  plots.py
rossmann_sales_forecasting/modeling/: predict.py  train.py
rossmann_sales_forecasting/rossmann_sales_forecasting/: features.py
tests/: test_data.py
