[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rossmann_sales"
version = "0.0.1"
description = "Rossmann Store Sales Forecasting is a time series machine learning project that predicts daily sales for over 1,000 Rossmann drug stores using historical sales data, promotions, holidays, and store-specific features. The project leverages advanced regression models and feature engineering, and includes an interactive Gradio app for real-time sales prediction."
authors = [
  { name = "Peter Obi" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["rossmann_sales"]
include = ["pyproject.toml", "rossmann_sales/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["rossmann_sales"]
force-sort-within-sections = true

